--- a/package.json
+++ b/package.json
@@ -12,6 +12,17 @@
   },
   "devDependencies": {
     "@leomotors/config": "0.11.0",
+    "@trivago/prettier-plugin-sort-imports": "4.1.1",
+    "@types/eslint": "8.44.0",
+    "@types/node": "18.16.19",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
+    "eslint": "8.45.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-sort-destructure-keys": "1.5.0",
+    "prettier": "3.0.0",
     "turbo": "1.10.7",
     "typescript": "5.1.6",
     "vite": "4.4.4",
