--- a/packages/cocoa-discord/package.json
+++ b/packages/cocoa-discord/package.json
@@ -17,8 +17,8 @@
     "cb": "pnpm clean && pnpm build",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
     "prepack": "pnpm cb && pnpm lint && pnpm test",
-    "lint": "eslint src *.{cjs,ts} --max-warnings=0",
-    "format": "eslint src *.{cjs,ts} --fix",
+    "lint": "eslint src tests *.{cjs,ts} --max-warnings=0",
+    "format": "eslint src tests *.{cjs,ts} --fix",
     "test": "FORCE_COLOR=2 vitest run",
     "test:coverage": "FORCE_COLOR=2 vitest run --coverage",
     "docs": "pnpm lm:config && typedoc"
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@leomotors/scripts": "3.1.0",
     "@types/sinon": "10.0.15",
-    "@vitest/coverage-c8": "0.33.0",
+    "@vitest/coverage-v8": "0.33.0",
     "c8": "8.0.0",
     "rimraf": "5.0.1",
     "sinon": "15.2.0",
