--- a/packages/cocoa-discord/tsconfig.json
+++ b/packages/cocoa-discord/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "esnext",
     "declaration": true,
     "sourceMap": true,
+    "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
