--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -8,18 +8,18 @@
     "lint": "eslint src"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue-jsx": "3.0.1",
-    "@vue/eslint-config-prettier": "7.1.0",
+    "@vitejs/plugin-vue-jsx": "3.0.2",
+    "@vue/eslint-config-prettier": "8.0.0",
     "@vue/eslint-config-typescript": "11.0.3",
     "@vue/tsconfig": "0.4.0",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
-    "eslint-plugin-vue": "9.15.1",
-    "postcss": "8.4.26",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.49.0",
+    "eslint-plugin-vue": "9.17.0",
+    "postcss": "8.4.29",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "vite": "4.4.4",
-    "vitepress": "1.0.0-beta.5",
+    "typescript": "5.2.2",
+    "vite": "4.4.9",
+    "vitepress": "1.0.0-rc.4",
     "vue": "3.3.4"
   }
 }
