--- a/packages/cocoa-discord/tsconfig.json
+++ b/packages/cocoa-discord/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "esnext",
+    "module": "nodenext",
     "declaration": true,
     "sourceMap": true,
     "declarationMap": true,
