--- a/turbo.json
+++ b/turbo.json
@@ -1,13 +1,13 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
+    "build:app": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
+    },
     "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "dist/**"
-      ]
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
     },
     "lint": {},
     "format": {},
