--- a/packages/cocoa-discord/package.json
+++ b/packages/cocoa-discord/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/Leomotors/cocoa-discord"
   },
-  "homepage": "https://leomotors.github.io/cocoa-discord/",
+  "homepage": "https://leomotors.github.io/cocoa-discord",
   "author": "Leomotors",
   "license": "MIT",
   "scripts": {
