--- a/packages/cocoa-discord/package.json
+++ b/packages/cocoa-discord/package.json
@@ -17,8 +17,8 @@
     "cb": "pnpm clean && pnpm build",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
     "prepack": "pnpm cb && pnpm lint && pnpm test",
-    "lint": "eslint src tests *.{cjs,ts} --max-warnings=0",
-    "format": "eslint src tests *.{cjs,ts} --fix",
+    "lint": "eslint src tests *.ts --max-warnings=0",
+    "format": "eslint src tests *.ts --fix",
     "test": "FORCE_COLOR=2 vitest run",
     "test:coverage": "FORCE_COLOR=2 vitest run --coverage",
     "docs": "pnpm lm:config && typedoc"
@@ -36,7 +36,7 @@
     "@types/sinon": "10.0.16",
     "@vitest/coverage-v8": "0.34.4",
     "rimraf": "5.0.1",
-    "sinon": "15.2.0",
+    "sinon": "16.0.0",
     "ts-node": "10.9.1",
     "typedoc": "0.25.1",
     "typescript": "5.2.2",
