feat: release action

--- a/packages/cocoa-discord/package.json
+++ b/packages/cocoa-discord/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord",
-  "version": "3.0.0",
+  "version": "3.0.0-dev.0",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "type": "module",
@@ -11,6 +11,9 @@
   "homepage": "https://leomotors.github.io/cocoa-discord",
   "author": "Leomotors",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "pnpm lm:config && tsc && rimraf \"dist/cli/**/*.d.ts*\"",
     "clean": "rimraf dist coverage docs-dist typedoc-out",
