--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,7 +5,7 @@ name: Documentation
 on:
   push:
     tags:
-      - "[0-9]+.[0-9]+.[0-9]+"
+      - "TEMP-DISABLED__cocoa-discord@*.*"
   workflow_dispatch:
 
 permissions:
