--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,9 +6,30 @@ on:
       - "*.*"
 
 jobs:
-  main:
-    name: Publish Release
+  data:
+    name: Get Data
     runs-on: ubuntu-latest
+
+    outputs:
+      data: ${{ steps.step-data.outputs }}
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: .nvmrc
+
+      - name: Get Data
+        id: step-data
+        run: node packages/tools/src/tag.mjs ${{ github.ref_name }} >> $GITHUB_OUTPUT
+
+  github-release:
+    name: Publish GitHub Release
+    runs-on: ubuntu-latest
+    needs: data
 
     steps:
       - name: Checkout Repository
@@ -18,8 +39,39 @@ jobs:
         uses: Leomotors/auto-publish-release@main
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
-          title: "Cocoa Discord {VERSION}"
+          title: "${{ fromJson(needs.data.outputs.data).packageTitle }} {VERSION}"
           tag: ${{ github.ref }}
+          changelog: ${{ fromJson(needs.data.outputs.data).packagePath }}/CHANGELOG.md
 
-  # todo
-  # npm-release:
+  npm-release:
+    name: Publish to npm
+    runs-on: ubuntu-latest
+    needs: data
+
+    env:
+      NPM_CONFIG_PROVENANCE: true
+
+    steps:
+      - name: actions/checkout
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+
+      - name: Setup node with cache
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: .nvmrc
+          cache: pnpm
+          registry-url: https://registry.npmjs.org
+
+      - name: Install Dependencies
+        run: pnpm install
+
+      - name: Build target package
+        run: pnpm turbo run --filter=${{ fromJson(needs.data.outputs.data).packageName }} build
+
+      - name: Release Package
+        run: pnpm --filter=${{ fromJson(needs.data.outputs.data).packageName }} publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
