--- a/packages/music-module/package.json
+++ b/packages/music-module/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cocoa-discord/music-module",
-  "version": "1.0.0-dev.0",
+  "version": "1.0.0",
   "description": "discord.js music bot that can be run standalone or as a module for other bots",
   "main": "dist/index.js",
   "typings": "./dist/index.d.ts",
@@ -42,7 +42,7 @@
   "dependencies": {
     "@discordjs/voice": "^0.16.0",
     "chalk": "^5.3.0",
-    "cocoa-discord-utils": "^2.3.0",
+    "cocoa-discord": "^3.0.0",
     "discord.js": "^14.13.0",
     "play-dl": "^1.9.6",
     "tslib": "^2.6.2",
