--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -21,7 +21,7 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "cocoa-discord": "^3.0.0-dev",
+    "cocoa-discord": "^3.0.0",
     "discord.js": "14.13.0",
     "dotenv": "16.3.1",
     "zod": "3.22.2"
