--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Build packages
+        run: pnpm run build
+
       - name: Build documentation
         run: pnpm run docs
 
