--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "FORCE_COLOR=2 turbo run lint",
     "format": "FORCE_COLOR=2 turbo run format",
     "test": "FORCE_COLOR=2 turbo run test",
-    "docs": "FORCE_COLOR=2 turbo run docs --parallel && bash postdoc.bash"
+    "docs": "FORCE_COLOR=2 turbo run docs --parallel && bash postdoc.bash",
+    "music": "pnpm --filter=@cocoa-discord/music-module bot"
   },
   "devDependencies": {
     "@leomotors/config": "0.11.0",
