--- a/packages/cocoa-discord/package.json
+++ b/packages/cocoa-discord/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "type": "module",
@@ -34,6 +34,7 @@
     "@leomotors/scripts": "3.1.0",
     "@types/sinon": "10.0.16",
     "@vitest/coverage-v8": "0.34.5",
+    "bun-types": "1.0.3",
     "rimraf": "5.0.1",
     "sinon": "16.0.0",
     "ts-node": "10.9.1",
