--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -13,17 +13,17 @@
   },
   "devDependencies": {
     "@leomotors/config": "0.11.0",
-    "@trivago/prettier-plugin-sort-imports": "4.2.0",
-    "@typescript-eslint/eslint-plugin": "6.7.2",
-    "@typescript-eslint/parser": "6.7.2",
-    "eslint": "8.50.0",
-    "prettier": "3.0.3",
-    "typescript": "5.2.2"
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "7.1.0",
+    "@typescript-eslint/parser": "7.1.0",
+    "eslint": "8.57.0",
+    "prettier": "3.2.5",
+    "typescript": "5.3.3"
   },
   "dependencies": {
-    "cocoa-discord": "^3.0.0",
-    "discord.js": "14.13.0",
-    "dotenv": "16.3.1",
-    "zod": "3.22.2"
+    "cocoa-discord": "workspace:^",
+    "discord.js": "14.14.1",
+    "dotenv": "16.4.5",
+    "zod": "3.22.4"
   }
 }
