--- a/packages/music-module/package.json
+++ b/packages/music-module/package.json
@@ -26,27 +26,27 @@
   "devDependencies": {
     "@discordjs/opus": "0.9.0",
     "@leomotors/scripts": "3.1.0",
-    "@trivago/prettier-plugin-sort-imports": "4.2.0",
-    "@types/uuid": "9.0.4",
-    "@typescript-eslint/eslint-plugin": "6.7.2",
-    "@typescript-eslint/parser": "6.7.2",
-    "dotenv": "16.3.1",
-    "eslint": "8.50.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-prettier": "5.0.0",
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
+    "@types/uuid": "9.0.8",
+    "@typescript-eslint/eslint-plugin": "7.1.0",
+    "@typescript-eslint/parser": "7.1.0",
+    "dotenv": "16.4.5",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
     "libsodium-wrappers": "0.7.13",
-    "prettier": "3.0.3",
-    "rimraf": "5.0.1",
-    "typedoc": "0.25.1",
-    "typescript": "5.2.2"
+    "prettier": "3.2.5",
+    "rimraf": "5.0.5",
+    "typedoc": "0.25.9",
+    "typescript": "5.3.3"
   },
   "dependencies": {
-    "@discordjs/voice": "^0.16.0",
+    "@discordjs/voice": "^0.16.1",
     "chalk": "^5.3.0",
-    "cocoa-discord": "^3.0.0",
-    "discord.js": "^14.13.0",
-    "microsoft-cognitiveservices-speech-sdk": "^1.32.0",
+    "cocoa-discord": "workspace:^",
+    "discord.js": "^14.14.1",
+    "microsoft-cognitiveservices-speech-sdk": "^1.35.0",
     "play-dl": "^1.9.7",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1"
