--- a/packages/music-module/package.json
+++ b/packages/music-module/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/leomotors/cocoa-discord"
   },
-  "author": "Leomotors",
+  "author": "leomotors",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
@@ -18,7 +18,8 @@
     "build": "pnpm lm-config && tsc",
     "lint": "eslint src",
     "format": "eslint src --fix",
-    "test": "node tests/index.js",
+    "test": "vitest run && node tests/index.js",
+    "test:cov": "vitest run --coverage",
     "bot": "pnpm build && node tests/bot.js",
     "prepack": "rimraf dist/* && pnpm build && pnpm lint && pnpm test",
     "docs": "pnpm lm-config && typedoc"
@@ -30,6 +31,7 @@
     "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "7.1.0",
     "@typescript-eslint/parser": "7.1.0",
+    "@vitest/coverage-v8": "1.3.1",
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
@@ -39,7 +41,8 @@
     "prettier": "3.2.5",
     "rimraf": "5.0.5",
     "typedoc": "0.25.9",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vitest": "1.3.1"
   },
   "dependencies": {
     "@discordjs/voice": "^0.16.1",
