--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "FORCE_COLOR=2 vitest run"
+    "test": "FORCE_COLOR=2 vitest run",
+    "test:cov": "vitest run --coverage"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "1.3.1",
