--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -8,18 +8,18 @@
     "lint": "eslint src"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue-jsx": "4.0.0",
-    "@vue/eslint-config-prettier": "9.0.0",
-    "@vue/eslint-config-typescript": "13.0.0",
-    "@vue/tsconfig": "0.5.1",
-    "autoprefixer": "10.4.19",
-    "eslint": "8.57.0",
-    "eslint-plugin-vue": "9.27.0",
-    "postcss": "8.4.39",
-    "tailwindcss": "3.4.4",
-    "typescript": "5.5.3",
-    "vite": "5.3.3",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.28.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8",
     "vitepress": "1.0.0-rc.4",
-    "vue": "3.4.31"
+    "vue": "^3.5.11"
   }
 }
