--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -12,18 +12,18 @@
     "lint": "eslint src"
   },
   "devDependencies": {
-    "@leomotors/config": "0.11.0",
-    "@trivago/prettier-plugin-sort-imports": "4.3.0",
-    "@typescript-eslint/eslint-plugin": "7.16.0",
-    "@typescript-eslint/parser": "7.16.0",
-    "eslint": "8.57.0",
-    "prettier": "3.3.2",
-    "typescript": "5.5.3"
+    "@leomotors/config": "^0.11.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^8.57.1",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "cocoa-discord": "workspace:^",
-    "discord.js": "14.15.3",
-    "dotenv": "16.4.5",
-    "zod": "3.23.8"
+    "discord.js": "^14.16.3",
+    "dotenv": "^16.4.5",
+    "zod": "^3.23.8"
   }
 }
