--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cocoa-discord/turborepo",
   "private": true,
-  "packageManager": "pnpm@9.5.0",
+  "packageManager": "pnpm@9.12.0",
   "scripts": {
     "build:app": "FORCE_COLOR=2 turbo run build:app",
     "build": "FORCE_COLOR=2 turbo run build",
@@ -14,21 +14,26 @@
     "music": "FORCE_COLOR=2 pnpm --filter=@cocoa-discord/music-module bot"
   },
   "devDependencies": {
-    "@leomotors/config": "0.11.0",
-    "@trivago/prettier-plugin-sort-imports": "4.3.0",
-    "@types/eslint": "8.56.10",
-    "@types/node": "20.14.10",
-    "@typescript-eslint/eslint-plugin": "7.16.0",
-    "@typescript-eslint/parser": "7.16.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-sort-destructure-keys": "1.5.0",
-    "prettier": "3.3.2",
-    "turbo": "1.12.4",
-    "typescript": "5.5.3",
-    "vite": "5.3.3",
-    "vitest": "2.0.2"
+    "@leomotors/config": "^0.11.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/eslint": "^8.56.12",
+    "@types/node": "^20.16.10",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-sort-destructure-keys": "^2.0.0",
+    "prettier": "^3.3.3",
+    "turbo": "^1.13.4",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8",
+    "vitest": "^2.1.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "discord-api-types": "^0.37.101"
+    }
   }
 }
