--- a/packages/music-module/package.json
+++ b/packages/music-module/package.json
@@ -25,33 +25,33 @@
     "docs": "pnpm lm-config && typedoc"
   },
   "devDependencies": {
-    "@discordjs/opus": "0.9.0",
-    "@leomotors/scripts": "3.1.0",
-    "@trivago/prettier-plugin-sort-imports": "4.3.0",
-    "@types/uuid": "10.0.0",
-    "@typescript-eslint/eslint-plugin": "7.16.0",
-    "@typescript-eslint/parser": "7.16.0",
-    "@vitest/coverage-v8": "2.0.2",
-    "dotenv": "16.4.5",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.1.3",
-    "libsodium-wrappers": "0.7.14",
-    "prettier": "3.3.2",
-    "rimraf": "6.0.1",
-    "typedoc": "0.26.4",
-    "typescript": "5.5.3",
-    "vitest": "2.0.2"
+    "@discordjs/opus": "^0.9.0",
+    "@leomotors/scripts": "^3.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "@vitest/coverage-v8": "^2.1.2",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "libsodium-wrappers": "^0.7.15",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "typedoc": "^0.26.7",
+    "typescript": "^5.6.2",
+    "vitest": "^2.1.2"
   },
   "dependencies": {
     "@discordjs/voice": "^0.17.0",
     "chalk": "^5.3.0",
     "cocoa-discord": "workspace:^",
-    "discord.js": "^14.15.3",
-    "microsoft-cognitiveservices-speech-sdk": "^1.38.0",
+    "discord.js": "^14.16.3",
+    "microsoft-cognitiveservices-speech-sdk": "^1.40.0",
     "play-dl": "^1.9.7",
-    "tslib": "^2.6.3",
+    "tslib": "^2.7.0",
     "uuid": "^10.0.0"
   },
   "keywords": [
