--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -7,7 +7,7 @@
     "test:cov": "vitest run --coverage"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "2.0.2",
-    "vitest": "2.0.2"
+    "@vitest/coverage-v8": "^2.1.2",
+    "vitest": "^2.1.2"
   }
 }
