--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-  "js/ts.implicitProjectConfig.experimentalDecorators": true,
-  "[javascript]": {
-    "editor.formatOnSave": false
-  },
-  "[typescript]": {
-    "editor.formatOnSave": false
-  }
+  "js/ts.implicitProjectConfig.experimentalDecorators": true
 }
