--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,22 +4,21 @@
   "type": "module",
   "scripts": {
     "dev": "vitepress dev src --port=3186",
-    "docs": "vitepress build src",
-    "lint": "eslint src"
+    "docs": "vitepress build src"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue-jsx": "^4.0.1",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
-    "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.28.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.8",
+    "@vitejs/plugin-vue-jsx": "^4.2.0",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.5.1",
+    "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.29.0",
+    "eslint-plugin-vue": "^10.2.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
     "vitepress": "1.0.0-rc.4",
-    "vue": "^3.5.11"
+    "vue": "^3.5.17"
   }
 }
