--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
   "name": "@cocoa-discord/turborepo",
   "private": true,
-  "packageManager": "pnpm@9.12.0",
+  "packageManager": "pnpm@10.12.1",
+  "type": "module",
   "scripts": {
     "build:app": "FORCE_COLOR=2 turbo run build:app",
     "build": "FORCE_COLOR=2 turbo run build",
     "dev": "FORCE_COLOR=2 turbo run dev --parallel",
-    "lint": "FORCE_COLOR=2 turbo run lint",
-    "format": "FORCE_COLOR=2 turbo run format",
-    "test": "FORCE_COLOR=2 turbo run test",
-    "test:cov": "FORCE_COLOR=2 turbo run test:cov",
+    "lint": "FORCE_COLOR=2 turbo run lint --continue",
+    "format": "FORCE_COLOR=2 turbo run format --continue",
+    "test": "FORCE_COLOR=2 turbo run test --continue",
+    "test:cov": "FORCE_COLOR=2 turbo run test:cov --continue",
     "docs": "FORCE_COLOR=2 turbo run docs --parallel && bash postdoc.bash",
     "music": "FORCE_COLOR=2 pnpm --filter=@cocoa-discord/music-module bot"
   },
   "devDependencies": {
-    "@leomotors/config": "^0.11.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/eslint": "^8.56.12",
-    "@types/node": "^20.16.10",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "@leomotors/config": "^1.0.1",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/node": "^22.15.32",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.0",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "prettier": "^3.3.3",
-    "turbo": "^2.1.3",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.8",
-    "vitest": "^2.1.2"
+    "prettier": "^3.5.3",
+    "turbo": "^2.5.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
   },
   "pnpm": {
     "overrides": {
-      "discord-api-types": "^0.37.101"
+      "discord-api-types": "^0.38.12"
     }
   }
 }
