--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@cocoa-discord/turborepo",
   "private": true,
-  "packageManager": "pnpm@10.12.1",
+  "engines": {
+    "node": "^24.11"
+  },
+  "packageManager": "pnpm@10.20.0",
   "type": "module",
   "scripts": {
     "build:app": "FORCE_COLOR=2 turbo run build:app",
