--- a/apps/example-v4/package.json
+++ b/apps/example-v4/package.json
@@ -8,8 +8,9 @@
   },
   "devDependencies": {
     "cocoa-discord-v4": "workspace:4.0.0",
-    "discord.js": "^14.20.0",
+    "discord.js": "^14.24.2",
     "dotenv-cli": "^11.0.0",
-    "tsdown": "^0.15.12"
+    "tsdown": "^0.15.12",
+    "zod": "^4.1.12"
   }
 }
