--- a/.github/workflows/caffemocha.yml
+++ b/.github/workflows/caffemocha.yml
@@ -10,13 +10,13 @@ jobs:
 
     steps:
       - name: actions/checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
 
       - name: Setup node with cache
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
           node-version-file: .nvmrc
           cache: pnpm
@@ -28,7 +28,7 @@ jobs:
         run: pnpm lint
 
       - name: CRLF Phobia
-        run: npx crlf-phobia *
+        run: pnpm dlx crlf-phobia *
 
   docs:
     name: Docs Gen Test
@@ -36,13 +36,13 @@ jobs:
 
     steps:
       - name: actions/checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
 
       - name: Setup node with cache
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
           node-version-file: .nvmrc
           cache: pnpm
@@ -53,9 +53,6 @@ jobs:
       - name: Build all Package
         run: pnpm run build
 
-      - name: Generating Documents Test
-        run: pnpm run docs
-
   caffe-mocha:
     name: Caffe Mocha Test
     runs-on: ubuntu-latest
@@ -64,13 +61,13 @@ jobs:
 
     steps:
       - name: actions/checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
 
       - name: Setup node with cache
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
           node-version-file: .nvmrc
           cache: pnpm
