--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,21 +4,11 @@
   "type": "module",
   "scripts": {
     "dev": "vitepress dev src --port=3186",
-    "docs": "vitepress build src"
+    "build": "vitepress build src",
+    "preview": "vitepress preview src"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue-jsx": "^4.2.0",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.6.0",
-    "@vue/tsconfig": "^0.8.1",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.39.0",
-    "eslint-plugin-vue": "^10.5.1",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.9.3",
-    "vite": "^7.1.12",
-    "vitepress": "1.0.0-rc.4",
+    "vitepress": "1.6.4",
     "vue": "^3.5.22"
   }
 }
